--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,27 @@ main{
     font-size: clamp(8px, 5vw, 1rem);
     box-shadow: -3px 4px 0 #888, -5px 7px 0 #333;
 }
+.buttons{
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    width: 65%;
+    transform: translate(-57%, 0);
+    display: flex;
+    gap: 15px;
+}
+.button{
+    width: 50%;
+    padding: 4%;
+    border: 2px solid #333;
+    border-radius: 5px;
+    font-size: clamp(8px, 5vw, 1rem);
+    font-weight: 600;
+    color: #fff;
+    background-color: #888;
+    box-shadow: -2px 3px 0 #888, -4px 0 #333;
+}
+.button:active{
+    box-shadow: inset -4px 4px 0 #333;
+    font-size: 0.9rem;
+}
