--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 body {
   text-align: center;
-  background: linear-gradient(to bottom, #6ab7f5, #fff);
+  background: linear-gradient(to bottom, #ADECFF, #fff);
   min-height: 100vh;
 }
 
@@ -25,7 +25,7 @@ main {
   max-width: 425px;
 }
 
-.pokemon__image {
+.pokemon_image {
   position: absolute;
   bottom: 55%;
   left: 50%;
@@ -33,7 +33,7 @@ main {
   height: 18%;
 }
 
-.pokemon__data {
+.pokemon_data {
   position: absolute;
   font-weight: 600;
   color: #aaa;
@@ -42,7 +42,7 @@ main {
   font-size: clamp(8px, 5vw, 25px);
 }
 
-.pokemon__name {
+.pokemon_name {
   color: #3a444d;
   text-transform: capitalize;
 }
@@ -54,7 +54,7 @@ main {
   left: 13.5%;
 }
 
-.input__search {
+.input_search {
   width: 100%;
   padding: 4%;
   outline: none;
@@ -79,13 +79,13 @@ main {
 .button {
   width: 50%;
   padding: 4%;
-  border: 2px solid #000;
+  border: 2px solid #333;
   border-radius: 5px;
   font-size: clamp(8px, 5vw, 1rem);
   font-weight: 600;
   color: white;
-  background-color: #444;
-  box-shadow: -2px 3px 0 #222, -4px 6px 0 #000;
+  background-color: #888;
+  box-shadow: -2px 3px 0 #888, -4px 6px 0 #333;
 }
 
 .button:active {
